# Mi-skill

./: .gitignore  README.md  SKILL.md  pyproject.toml  rules.md
config/: settings.yaml
output/: book_skeleton.md  cross_validation.md
src/: __init__.py  cli.py
src/book_parser/: __init__.py  parser.py
src/distiller/: __init__.py  distiller.py
src/skill_renderer/: __init__.py
src/tweet_scraper/: __init__.py
src/utils/: config.py  llm_client.py
tests/: test_book_parser.py  test_config.py  test_distiller.py  test_tweet_scraper.py
