[project]
name = "book-tweet-distill"
version = "0.1.0"
description = "书 + 推文联合蒸馏管线：从方法论书和实战推文中提取知识，生成 AI Skill"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24.0",
    "playwright>=1.45.0",
    "openai>=1.40.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
]

[project.scripts]
distill = "src.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
